# streaming_churn

./: .gitignore  pyproject.toml
data/processed/: streaming_data.csv
notebooks/: EDA.ipynb  eda.ipynb  streaming_churn.ipynb
