[tool.poetry]
name = "streaming-churn"
version = "0.1.0"
description = ""
authors = ["Guilherme Prado <gui_prado@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
numpy = "^1.26.0"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
jupyter = "^1.0.0"
missingno = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
